# pokerbench-ng

./: .gitignore  GOAL_STATE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/: hosted_eval.example.yaml  mvp_hunl_rollout.yaml  mvp_hunl_static.yaml
docs/: DATA_AND_LEAKAGE.md  IMPLEMENTATION_BRIEF.md  METRICS.md  PLAN.md  RISK_REGISTER.md  ROADMAP.md  SCAFFOLD.md  SCHEMAS.md  TODO.md
docs/evidence/mvp-final/: README.md  rollout.leaderboard.json  rollout.md  rollout.metrics.json  rollout.run.json  static.leaderboard.json  static.md  static.metrics.json
examples/agents/http_agent/: README.md  agent.yaml
examples/agents/model_only_agent/: agent.yaml  prompt.md
examples/agents/python_random_agent/: agent.py  agent.yaml
schemas/: agent_request.schema.json  agent_response.schema.json  leaderboard.schema.json  legal_action.schema.json  metrics.schema.json  run_record.schema.json
src/pokerbench_ng/: __init__.py  cli.py
src/pokerbench_ng/agents/: __init__.py  http_agent.py  model_only_adapter.py  protocol.py  python_agent.py  subprocess_agent.py  validation.py
src/pokerbench_ng/bots/: __init__.py  always_fold.py  call_check.py  pot_odds.py  random_legal.py  scripted_gto_lite.py  tight_abc.py
tests/integration/: test_cli.py
tests/property/: __init__.py  test_engine_invariants.py
tests/unit/: test_agent_adapters.py  test_bots.py  test_cards.py  test_hand_eval.py  test_legal_actions.py  test_protocol.py  test_rollout_match.py  test_rollout_scorer.py  test_static_scorer.py  test_transitions.py
(+31 files in other folders)
